<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/login">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vTxt_emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vTxt_emailLogin"
                android:textColor="@color/vTxt_emailLogin" />

            <EditText
                android:id="@+id/eTxt_emailLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/eTxt_emailLogin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vtxt_passwordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vTxt_passwordLogin"
                android:textColor="@color/vTxt_passwordLogin" />

            <EditText
                android:id="@+id/eTxt_passwordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/eTxT_passwordLogin"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_loginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_loginLogin"
            android:text="@string/btn_loginLogin" />

        <Button
            android:id="@+id/btn_registerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_registerLogin" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>